# rusty-pub

./: .gitignore  Cargo.toml
rusty-hub/: .gitignore  Cargo.toml
rusty-hub/migrations/: 20210129211228_accounts.sql  20211230201322_login_handling.sql.sql
rusty-hub/src/: activitypub.rs  auth.rs  db.rs  mailjet.rs  main.rs  templating.rs  user.rs  webfinger.rs
rusty-hub/templates/: index.html  link_was_sent.html  login.html  test.html
