[package]
name = "rusty-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["headers", "json", "ws"]}
reqwest = { version = "0.11.10", features = ["json"]}
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
urlencoding = "2.1.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
