[package]
name = "rusty-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["headers", "json", "ws"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
reqwest = { version = "0.11.10", features = ["json"]}
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
urlencoding = "2.1.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tower = "0.4.12"
tower-http = { version = "0.3.2", features = ["full"]}
dotenv = "0.15.0"
rsa = { version = "0.6.1", features = ["pem"]}
rand = "0.8.5"
