[package]
name = "rusty-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#   utils
dotenv = "0.15.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
reqwest = { version = "0.11.10", features = ["json"]}
url = "2.2.2"
urlencoding = "2.1.0"
rsa = { version = "0.6.1", features = ["pem"]}
rand = "0.8.5"

#   data
serde = { version = "1", features = ["derive"]}
serde_json = "1"

# web server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5.4", features = ["headers", "json", "ws"]}
tower = "0.4.12"
tower-http = { version = "0.3.2", features = ["full"]}

#   database
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "json", "uuid", "migrate", "macros", "any", "chrono" ] } 
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "*", features= ["serde"]}

#   html layout
tera = "1"
